# data-engine

./: .cursorrules  .gitignore  README.md  bun.lockb  nodemon.json  package.json  server.ts
apps/backend/: .cursorrules  .dockerignore  .gitignore  Dockerfile  README.md  bun.lockb  design.md  index.ts  nodemon.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/backend/api/: .env.example  settings.py  urls.py  views.py
apps/backend/engine/: authentication.py  models.py  urls.py  views.py
apps/backend/engine/services/: ai_service.py  base.py  classifiers.py  column_processor.py  csv_service.py  deduplication_service.py  email_service.py  types.py
apps/backend/src/controllers/: parser.ts
apps/backend/src/lib/: ollama.ts
apps/backend/src/routes/: parserRoutes.ts
apps/frontend/: .env.local.example  bun.lockb  components.json  next.config.mjs  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
apps/frontend/.storybook/: main.ts  preview.tsx
apps/frontend/public/: manifest.json  robots.txt
apps/frontend/src/: middleware.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: MergeSidepanel.tsx
apps/frontend/src/icons/: academic-cap-solid.tsx  academic-cap.tsx  adjustments-done.tsx  adjustments.tsx  ai-assistent.tsx  apple.tsx  beaker.tsx  (+303 more)
apps/infrastructure/: Pulumi.production.yaml  Pulumi.yaml  README.md  bun.lockb  index.ts  package.json
src/lib/: ollama.ts  redis.ts
src/routes/: parserRoutes.ts
src/types/: parser.ts
(+113 files in other folders)
