[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend application"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.13"
django = "^5.1.3"
splink = "^4.0.5"
djangorestframework = "^3.15.2"
polars = "^1.12.0"
boto3 = "^1.35.57"
django-environ = "^0.11.2"
django-cors-headers = "^4.6.0"
openai = "^1.56.0"
nameparser = "^1.1.3"
pydantic = "^2.9.2"
phonenumbers = "^8.13.49"
tiktoken = "^0.8.0"
pyarrow = "^18.0.0"
cleanco = "^2.3"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"